[package]
name = "substreams-ethereum-quickstart"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams-ethereum = "0.9.3"
prost = "0.11"
ethabi = "17.0"
hex-literal = "0.3.4"
prost-types = "^0.11.0"
num-bigint = "0.4.3"
substreams = "0.5.10"
substreams-entity-change = "1.3.0"
wasm-bindgen = "0.2.87"
substreams-database-change = "1.2.1"

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1.0.72"
substreams-ethereum = "0.9"
